# HMI-2.00

./: .gitignore  Base hover click tab.ui  README.md  abc.hmi  app_settings.json  button_creator.py  main.py  modern_gui v12.hmi  pyproject.toml  readme.md  requirements.txt  style use.txt  tmp_import_test.py
Release/: scene_utils.cp313-win_amd64.pyd
components/: array_tree_handler.py  comment_filter_model.py  comment_table_model.py  comment_table_widget.py  custom_header_view.py  custom_tree_widget.py  docks.py  property_editor.py  ribbon.py  selection_overlay.py  tag_editor_widget.py  theme_selector.py  toolbar.py  transform_handler.py  tree_widget.py  updated_tree_widget.py  welcome_widget.py
cpp/: CMakeLists.txt  scene_utils.cpp
dialogs/: __init__.py  _custom_message_box.py  add_tag_dialog.py  base_dialog.py  comment_table_dialog.py  custom_info_dialog.py  custom_message_box.py  custom_question_dialog.py  custom_widgets.py  icon_picker_dialog.py  new_tag_database_dialog.py  project_info_dialog.py  qtawesome_icons.json  question_dialog.py  screen_properties_dialog.py  tag_browser_dialog.py  widgets.py
lib/: button_toggle_switches.json  button_volume_controls.json  icons.html
main_window/: __init__.py  actions.py  clipboard.py  events.py  handlers.py  project_actions.py  tabs.py  ui_setup.py  window.py
runtime_simulator/: __init__.py  alarm_manager.py  background_tasks.py  data_manager.py  logging_manager.py  main.py  recipe_manager.py  remote_view.py  screens.py  script_engine.py  simulator.py
services/: clipboard_service.py  command_history_service.py  (+12 more)
(+110 files in other folders)
